[package]
name = "rpc-to-prom"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0", features = ["full", "reqwest-rustls-tls"] }
alloy-contract = "0"
alloy-pubsub = "0"
async-std = { version = "1.13.0", features = ["attributes", "tokio1"] }
dotenvy = "0.15.7"
poem = { version = "3.1.5", features = ["rustls"]}
prometheus = "0.13.4"
reqwest = { version = "0.12.9", features = ["rustls-tls"] }
rustls = "0.23.20"
