[package]
name = "eth-exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.11", features = [
    "full",
    "reqwest-rustls-tls",
], default-features = false }
anyhow = "1.0.95"
# alloy-contract = "0"
# alloy-pubsub = "0"
async-std = { version = "1.13.0", features = ["attributes", "tokio1", "unstable"] }
dotenvy = "0.15.7"
futures = "0.3.31"
poem = { version = "3.1.5", features = ["rustls"] }
prometheus = "0.13.4"
reqwest = { version = "0.12.9", features = [
    "rustls-tls",
    # Add back the default features excluding native-tls
    "charset",
    "http2",
    "macos-system-configuration",
], default-features = false }
rustls = "0.23.20"
uniswap-v3-sdk = { version = "3.4.0", features = ["extensions", "std"] }
